# CSD2

./: PERSONAL PROGRESS.txt  README.md  pyproject.toml
C++/FINALSYNTH_2/: Makefile  design.txt  fmosc.cpp  fmosc.h  main.cpp  modulator.cpp  modulator.h  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  song.txt  square.cpp  square.h  synth  synthesizer.cpp  synthesizer.h  tripleosc.cpp  tripleosc.h  utils.h
C++/HelloWorld/: main  main.cpp
C++/MinecraftEffect/: CMakeLists.txt  Effect.h  main.cpp  sharedCode
C++/MinecraftEffect/include/: lo
C++/instrument_class/: instrument.cpp  instrument.h  main  main.cpp  makefile
C++/instrument_inheretance/: drums.cpp  drums.h  main  main.cpp  makefile  piano.cpp  piano.h
C++/sharedCode/: CMakeLists.txt
C++/sharedCode/oscillators/: CMakeLists.txt
Python/: hello.txt  hello_user.py
opdr 2 rythm_sampler/: rythm_sampler.py
python_basics/: hello_samples.py  pyproject.toml
sequencer/: sequencer.py
