[tool.poetry]
name = "csd2"
version = "0.1.0"
description = ""
authors = ["Peppy <pepijn.degroot@student.hku.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playaudio = "^1.0.5"
simpleaudio = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
